# Weather

./: .gitignore  CMakeLists.txt  Debug.h  LICENSE  Readme.md  SerialProtocol.c  SerialProtocol.h  USART0.c  USART0.h  Watchdog.c  Watchdog.h  avr.cmake  main.c
doc/: RF24-RPI-wiring.txt  Weatherbug r1.2.fzz
src/: Batman.c  Batman.h  Debug.h  Misc.h  Network.c  Network.h  TCP.c  TCP.h  Time.c  Time.h
src/avr/: DHT.c  DHT.h  Debug.h  RF24.c  RF24.h  SPI.c  SPI.h  USART0.c  USART0.h  arduino.cmake  avr.cmake
src/avr/rf24-echo/: CMakeLists.txt  main.cpp
src/avr/rf24-ping/: CMakeLists.txt  main.cpp
src/avr/weatherbug/: CMakeLists.txt  Timer.c  Timer.h  Watchdog.c  Watchdog.h  main.cpp
src/rpi/: CMakeLists.txt  Globals.h  rf24-cli.cpp  rf24-echo.cpp  rf24-network.cpp  rf24-packet-router.cpp  rf24-ping.cpp  rf24-tcp.cpp  rf24_common.cpp  rf24_common.h
